dimagi-SalesforceFB/src/objects/Accounting_LineItems__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_FeatureRate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting_FeatureRate</label>
        <referenceTo>Accounting_Featurerate__c</referenceTo>
        <relationshipLabel>Accounting_LineItems</relationshipLabel>
        <relationshipName>Accounting_LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature_Type1__c</fullName>
        <label>Feature_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applied_credit__c</fullName>
        <label>applied_credit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>base_cost__c</fullName>
        <label>base_cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>base_description__c</fullName>
        <label>base_description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature_type__c</fullName>
        <formula>Accounting_FeatureRate__r.feature__r.feature_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>feature_type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoice__c</fullName>
        <label>invoice</label>
        <referenceTo>Accounting_Invoice__c</referenceTo>
        <relationshipLabel>Accounting_LineItems</relationshipLabel>
        <relationshipName>Accounting_LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subtotal__c</fullName>
        <label>subtotal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>unit_cost__c</fullName>
        <label>unit_cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>unit_description__c</fullName>
        <label>unit_description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_LineItems</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>